<resources>
    <string name="app_name">ASPRA Móvil</string>
    <string name="home_name">Inicio</string>
    <string name="contacto_name">Contacto</string>
    <string name="login_name">Inicio de Sesión</string>
    <string name="registro_name">Registrarse</string>
    <string name="reportar_name">Reportar</string>
    <string name="login_inicio">Ingresar</string>
    <string name="registrarse_confirmar">Confirmar</string>
    <string name="reporte_enviar">Enviar</string>
    <string name="Direccion">Direccion</string>
    <string name="Motivo">Motivo</string>
    <string name="Descripcion">Descripcion</string>
    <string name="SALIR">SALIR</string>
    <string name="su_reporte_fue_enviado_exitosamente">Su reporte fue enviado exitosamente!</string>
    <string name="mis_reportes_name">Mis Reportes</string>
    <string name="reporte_name">Reporte</string>
    <string name="editar">Editar</string>
    <string name="confirmar">Confirmar</string>
    <string name="mi_cuenta_name">Mi cuenta</string>
    <string name="multimedia">Ver video institucional</string>
    <string name="modificar">Modificar datos</string>
    <string name="eliminar_reporte">ELIMINAR REPORTE</string>
    <string name="empezar_bienvenida">Empezar</string>
    <string name="fondo_transparente_de_aspra_con_el_texto_proteccion_de_animales">fondo transparente de aspra con el texto proteccion de animales</string>
    <string name="bienvenido_a_aspra_movil">¡Bienvenido a ASPRA Móvil!</string>
    <string name="gracias_por_ser_parte_de_nuestra_mision_de_proteger_y_ayudar_a_los_animales_tu_participacion_es_fundamental_para_crear_un_entorno_mas_seguro_y_amoroso_para_nuestros_amigos_de_cuatro_patas">Gracias por ser parte de nuestra misión de proteger y ayudar a los animales. Tu participación es fundamental para crear un entorno más seguro y amoroso para nuestros amigos de cuatro patas.</string>
    <string name="logo_de_whatsapp">logo de whatsapp</string>
    <string name="logo_de_correo">logo de correo</string>
    <string name="logo_con_forma_de_casa">logo con forma de casa</string>
    <string name="logo_de_mundo">logo de mundo</string>
    <string name="logo_con_forma_de_huella_canina">logo con forma de huella canina</string>
    <string name="boton_que_redirecciona_a_la_pagina_de_aspra_com_ar">Boton que redirecciona a la pagina de aspra.com.ar</string>
    <string name="gracias_por_su_colaboracion">Gracias por su colaboracion❤️</string>
    <string name="contactate">Contactate</string>
    <string name="av_duarte_quiros_2800">Av. Duarte Quirós 2800</string>
    <string name="aspraproteccionanimal_gmail_com">aspraproteccionanimal@gmail.com</string>
    <string name="_54_351_6110625">+54 351 6110625</string>
    <string name="para_mas_informacion_accede_a_nuestro_sitio_web">Para más información, accedé a nuestro sitio web:</string>
    <string name="aspra_com_ar">ASPRA.com.ar</string>
    <string name="desea_cambiar_su_contrasena_editarcuenta">¿Desea cambiar su contraseña?</string>
    <string name="editar_cuenta">Editar Cuenta</string>
    <string name="telefono_editarcuenta">Teléfono</string>
    <string name="contrasena_editarcuenta">Contraseña</string>
    <string name="nombre_de_usuario_editarcuenta">Nombre de usuario</string>
    <string name="volver_al_home_editarcuenta">Volver al home</string>
    <string name="editar_reporte">Editar Reporte</string>
    <string name="direccion_editarreporte">Dirección</string>
    <string name="descripcion_editarreporte">Descripción</string>
    <string name="volver_al_home_editarreporte">Volver al home</string>
    <string name="has_olvidado_tu_contrasena_login">¿Has olvidado tu contraseña?</string>
    <string name="desea_registrarse_login">¿Desea registrarse?</string>
    <string name="iniciar_sesion_login">Iniciar Sesión</string>
    <string name="contrasena_login">Contraseña</string>
    <string name="e_mail_login">E-mail</string>
    <string name="cerrar_sesion_main">Cerrar sesion ╰┈➤</string>
    <string name="iniciar_sesion_main">INICIAR SESION</string>
    <string name="usuario_micuenta">usuario</string>
    <string name="telefono_micuenta">Telefono</string>
    <string name="celular_micuenta">Telefono</string>
    <string name="e_mail_micuenta">Email</string>
    <string name="dar_de_baja_cuenta_micuenta">DAR DE BAJA CUENTA</string>
    <string name="correo_micuenta">Correo</string>
    <string name="nombre_de_usuario_micuenta">Nombre de usuario</string>
    <string name="boton_X_micuenta">❌</string>
    <string name="editar_cuenta_micuenta">EDITAR CUENTA 📝</string>
    <string name="observa_aqui_todos_los_reportes_que_hayas_realizado_desde_la_app">Observa aqui, todos los reportes que hayas realizado desde la app</string>
    <string name="direccion_misreportes">Direccion</string>
    <string name="fecha_misreportes">Fecha</string>
    <string name="mis_reportes">Mis Reportes</string>
    <string name="anadir_reporte_misreportes">Añadir Reporte</string>
    <string name="registro">Registro</string>
    <string name="ingrese_sus_datos_y_cree_su_cuenta">Ingrese sus datos y cree su cuenta</string>
    <string name="nombre_de_usuario_registrarse">Nombre de usuario</string>
    <string name="telefono_registrarse">Teléfono</string>
    <string name="contrasena_registrarse">Contraseña</string>
    <string name="correo_electronico_registrarse">Correo electrónico</string>
    <string name="volver_al_home_registrarse">Volver al home</string>
    <string name="crear_cuenta">CREAR CUENTA ️✔️</string>
    <string name="confirme_la_contrasena_registrarse">Confirme la contraseña</string>
    <string name="detallanos_tu_reporte">Detallanos tu reporte</string>
    <string name="desde_donde_queres_enviar_tu_reporte">Desde donde queres enviar tu reporte?</string>
    <string name="seleccione_el_motivo_de_su_reporte">Seleccione el motivo de su reporte</string>
    <string name="enviar_reporte">ENVIAR REPORTE</string>
    <string name="por_favor_ingrese_una_descripcion">Por favor, ingrese una descripción</string>
    <string name="por_favor_ingrese_una_direccion">Por favor, ingrese una dirección</string>
    <string name="boton_tilde_reportar">✅</string>
    <string name="mi_reporte">Mi Reporte</string>
    <string name="texto_desplegable_reporte">Texto desplegable</string>
    <string name="direccion_reporte">Direccion</string>
    <string name="descripcion_reporte">Descripcion</string>
    <string name="boton_X_reporte">❌</string>
    <string name="volver_al_home_reporte">Volver al home</string>
    <string name="Titulo_direccion_reporte">Direccion</string>
    <string name="Titulo_descripcion_reporte">Descripcion</string>
    <string name="motivo_reporte">Motivo</string>
    <string name="reporte_enviado_exitosamente">REPORTE ENVIADO EXITOSAMENTE!</string>
    <string name="muchas_gracias_por_colaborar_con_aspra_reporteexitoso">Muchas gracias por colaborar con ASPRA</string>
    <string name="codigo_qr">Codigo_QR</string>

</resources>