<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".EditarCuentaActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="77dp"
        android:layout_height="65dp"
        android:contentDescription="@string/logo_con_forma_de_huella_canina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/icono2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/barlow_normal"
        android:text="@string/editar_cuenta"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48dp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="294dp"
        android:layout_height="56dp"
        android:layout_marginBottom="40dp"
        android:background="@color/primary"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/nombre_de_usuario_editarcuenta"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20dp"
        android:theme="@style/Base.Theme.ASPRAAPP"
        android:autofillHints="username"
        app:layout_constraintBottom_toTopOf="@+id/editPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="294dp"
        android:layout_height="56dp"
        android:layout_marginTop="320dp"
        android:background="@color/primary"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/contrasena_editarcuenta"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="20dp"
        android:autofillHints="password"
        app:layout_constraintBottom_toTopOf="@+id/editPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="294dp"
        android:layout_height="56dp"
        android:layout_marginTop="396dp"
        android:background="@color/primary"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/telefono_editarcuenta"
        android:inputType="phone"
        android:textAlignment="center"
        android:textSize="20dp"
        android:autofillHints="phone"
        app:layout_constraintBottom_toTopOf="@+id/button_conf_edit_cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

    <Button
        android:id="@+id/button_conf_edit_cuenta"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="124dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/barlow_normal"
        android:onClick="irMiCuenta2"
        android:text="@string/confirmar"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748"
        app:strokeColor="@color/black"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_home_principal"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/secondary"
        android:fontFamily="@font/barlow_normal"
        android:onClick="irMain"
        android:text="@string/volver_al_home_editarcuenta"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/button_conf_edit_cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/secondary"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="56dp"
        android:text="@string/desea_cambiar_su_contrasena_editarcuenta"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>