<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".ReporteActivity">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/reporte_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_editar_reporte"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="308dp"
        android:backgroundTint="@color/white"
        android:onClick="irEditarReporte"
        android:text="@string/editar"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_eliminar_reporte"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#FF0000"
        android:onClick="eliminarReporte"
        android:text="Eliminar reporte"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:strokeColor="@color/black"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="568dp"
        android:text="@string/Direccion"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="496dp"
        android:text="@string/Motivo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="131dp"
        android:layout_height="36dp"
        android:layout_marginBottom="416dp"
        android:text="@string/Descripcion"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>