<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:fontFamily="@font/barlow_normal"
        android:text="@string/reporte_enviado_exitosamente"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/botonRedireccionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="77dp"
        android:layout_height="65dp"
        android:contentDescription="@string/logo_con_forma_de_huella_canina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/icono2" />

    <Button
        android:id="@+id/botonRedireccionar"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginBottom="124dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/barlow_normal"
        android:onClick="redirigirAMainActivity"
        android:text="@string/SALIR"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:fontFamily="@font/comfortaa"
        android:text="@string/muchas_gracias_por_colaborar_con_aspra_reporteexitoso"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/botonRedireccionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />
</androidx.constraintlayout.widget.ConstraintLayout>