<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".EditarReporteActivity">

    <EditText
        android:id="@+id/editDescripcion"
        android:layout_width="294dp"
        android:layout_height="56dp"
        android:layout_marginTop="420dp"
        android:background="@color/primary"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/descripcion_editarreporte"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20dp"
        android:theme="@style/Base.Theme.ASPRAAPP"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spMotivo"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editDireccion"
        android:layout_width="294dp"
        android:layout_height="56dp"
        android:layout_marginTop="244dp"
        android:background="@color/primary"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/direccion_editarreporte"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20dp"
        android:theme="@style/Base.Theme.ASPRAAPP"
        android:autofillHints="postalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="77dp"
        android:layout_height="65dp"
        android:contentDescription="@string/logo_con_forma_de_huella_canina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/icono2" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/barlow_normal"
        android:text="@string/editar_reporte"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48dp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_edit_reporte"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="124dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/barlow_normal"
        android:onClick="irReporte"
        android:text="@string/confirmar"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/secondary"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_home_principal"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/secondary"
        android:fontFamily="@font/barlow_normal"
        android:onClick="irMain"
        android:text="@string/volver_al_home_editarreporte"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/secondary"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spMotivo"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="294dp"
        android:layout_height="58dp"
        android:background="@color/primary"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/editDireccion"
        app:layout_constraintBottom_toTopOf="@id/editDescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>