<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="4dp"
    tools:context=".ReportarActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="227dp"
        android:layout_height="64dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="56dp"
        android:text="@string/reporte_name"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_reporte_enviar"
        android:layout_width="163dp"
        android:layout_height="58dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/secondary"
        android:onClick="irReporteExitoso"
        android:text="@string/reporte_enviar"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:iconTint="@color/secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescripcion"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etDireccion"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="Por favor, ingrese una dirección"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvMotivo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spMotivo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:dropDownWidth="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/Descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMotivo" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="536dp"
        android:ems="10"
        android:hint="Por favor, ingrese una descripción"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMotivo"
        android:layout_width="129dp"
        android:layout_height="45dp"
        android:layout_marginTop="304dp"
        android:text="@string/Motivo"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Descripcion"
        android:layout_width="180dp"
        android:layout_height="41dp"
        android:layout_marginTop="448dp"
        android:text="@string/Descripcion"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/etDescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="173dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="56dp"
        android:text="@string/Direccion"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMotivo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>