<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:contentDescription="@null"
        app:srcCompat="@drawable/aspra"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/button_home_login"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="124dp"
        android:backgroundTint="@color/secondary"
        android:onClick="irLogin"
        android:text="@string/login_name"
        android:textSize="20sp"
        app:cornerRadius="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:strokeColor="@color/black"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_home_contacto"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginStart="146dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="@color/secondary"
        android:onClick="irContacto"
        android:text="@string/contacto_name"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_home_reportar"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginStart="149dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/secondary"
        android:onClick="irReportar"
        android:text="@string/reporte_name"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button_home_contacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_home_login"
        app:layout_constraintVertical_bias="0.611"
        app:strokeColor="@color/black"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>